# windy-city-politics

./: Cargo.toml  README.md
assets/prefab/: area.ron  character.ron  playercharacter.ron
assets/ui/: mainmenu.ron
base/: Cargo.toml
base/src/: config.rs  main.rs  texture.rs
base/src/game/: area.rs  bundle.rs  character.rs  loading.rs  mod.rs  state.rs
base/src/systems/: input.rs  mod.rs
base/src/systems/movement/: camera.rs  mod.rs  player.rs
resources/: bindings_config.ron  config.ron  display_config.ron
src/: area.rs  bundle.rs  game.rs  main.rs  mainmenu.rs  menu.rs  render.rs
src/game/: area.rs  assets.rs  bundle.rs  character.rs  consts.rs  loading.rs  mod.rs  state.rs
src/systems/: mod.rs
src/systems/movement/: camera.rs  mod.rs  player.rs  update_transforms.rs  utils.rs
