[package]
name = "windy-city-politics"
version = "0.1.3"
authors = ["Petter Johansson <pjohansson@fastmail.com>"]
edition = "2018"

[dependencies]
amethyst = { version = "0.11", features = ["vulkan", "nightly"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
amethyst_test = "0.2"
lazy_static = "1.3"
rayon = "1.1"